# OpenTK-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  Matrix4.cs  Quaternion.cs  README.md  Vector4.cs  build.sh  compile_commands.json  pack.sh  test.sh  tests.txt
.cache/clangd/index/: main.cpp.03CEB7F404AD23A3.idx
include/OpenTK/: Ported.hpp
include/OpenTK/Mathematics/: GlobalSupression.hpp  MathHelper.hpp  Matrix.hpp  Quaternion.hpp  Types.hpp  Vector.hpp
include/OpenTK/Mathematics/Enums/: MidpointRounding.hpp
include/OpenTK/Mathematics/Vector/: Vector.hpp
include/OpenTK/Ported/: ConcurrentQueue.hpp  Event.hpp  IReadOnlyList.hpp  IntPtr.hpp  Property.hpp  ReadOnlySpan.hpp  intptr.hpp  mods.hpp
include/OpenTK/Windowing/Common/: MonitorHandle.hpp  VSyncMode.hpp  WindowBorder.hpp  WindowState.hpp
include/OpenTK/Windowing/Desktop/: GLFWGraphicsContext.hpp  GLFWProvider.hpp  IGLFWGraphicsContext.hpp  NativeWindow.hpp  template.hpp
include/OpenTK/Windowing/GraphicsFramework/: Cursor.hpp  GLFW.hpp  GLFWCallbacks.hpp  GLFWException.hpp  GammaRamp.hpp  Image.hpp  Monitor.hpp  VideoMode.hpp  Window.hpp
include/OpenTK/windowing/common/: monitorhandle.hpp  vsyncmode.hpp  windowborder.hpp
include/OpenTK/windowing/desktop/: template.hpp
include/OpenTK/windowing/graphicsframework/: gammaramp.hpp  glfw.hpp  glfwcallbacks.hpp  image.hpp  keyboardstate.hpp  monitor.hpp  mousestate.hpp  window.hpp
src/OpenTK/windowing/common/: monitorhandle.hpp  vsyncmode.hpp  windowborder.hpp  windowstate.hpp
src/OpenTK/windowing/graphicsframework/: cursor.hpp  gammaramp.hpp  glfw.hpp  glfwcallbacks.hpp  mousestate.hpp  videomode.hpp
src/core/: event.hpp  intptr.hpp  mods.hpp
src/windowing/common/: monitorhandle.hpp  vsyncmode.hpp  windowborder.hpp  windowstate.hpp
src/windowing/common/enums/: contextapi.hpp  contextflags.hpp  contextprofile.hpp  cursorstate.hpp
src/windowing/common/events/: filedropeventargs.hpp  focuschangedeventargs.hpp  framebufferresizeeventargs.hpp  frameeventargs.hpp  joystickeventargs.hpp  keyboardkeyeventargs.hpp  maximizedeventargs.hpp  minimizedeventargs.hpp  monitoreventargs.hpp  mousebuttoneventargs.hpp  mousemoveeventargs.hpp  mousewheeleventargs.hpp  resizeeventargs.hpp  template.hpp  textinputeventargs.hpp  windowpositioneventargs.hpp
src/windowing/common/input/: image.hpp  (+2 more)
src/windowing/desktop/: template.hpp
src/windowing/graphicsframework/: cursor.hpp  gammaramp.hpp  glfw.hpp  glfwcallbacks.hpp  image.hpp  keyboardstate.hpp  monitor.hpp  mousestate.hpp  videomode.hpp  window.hpp
tests/: GraphicsFrameworkTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  VectorTest.cpp
(+203 files in other folders)
